resize logo dynamically

--- a/assets/presentation-customizations/logo.css
+++ b/assets/presentation-customizations/logo.css
@@ -1,6 +1,6 @@
 .reveal .slide-logo {
     height: unset !important;
-    width: 250px !important;
+    width: 15% !important;
     max-width: unset !important;
     max-height: unset !important;
   }
