update website background; make off-white

--- a/assets/customizations/website-custom.scss
+++ b/assets/customizations/website-custom.scss
@@ -4,7 +4,7 @@
 // NOAA colors from 2023 Fisheries Palette
 // Check contrast: https://colourcontrast.cc/
 // define colors
-$website-background: #F1F2F3;
+$website-background: #fafafa;
 $theme-whale-gray: #323C46;
 $theme-midnight-sky: #001743;
 $theme-twilight-sky: #002364;
