prez: example results

--- a/assets/customizations/presentation-custom.scss
+++ b/assets/customizations/presentation-custom.scss
@@ -40,6 +40,10 @@ $presentation-h1-font-size: 2em;
   font-weight: bold;
 }
 
+.bg {
+  color: $theme-background;
+}
+
 .moby-blue {
   color: #1D63ED;
   font-weight: bold;
