prez: complete draft

--- a/assets/customizations/presentation-custom.scss
+++ b/assets/customizations/presentation-custom.scss
@@ -40,6 +40,10 @@ $presentation-h1-font-size: 2em;
   font-weight: bold;
 }
 
+.font-small {
+  font-size: smaller;
+}
+
 .bg {
   color: $theme-background;
 }
